# cblt

./: .gitignore  Cargo.toml  Cbltfile  Dockerfile  README.md  advice.md  article-en.md  optimisation.md  publish.sh  release.sh  testcookie.hurl  tls.md
assets/: index.html
benchmark/: fake_server.rs  fake_server1.rs
benchmark/cblt/: Cargo.toml  Cbltfile  Dockerfile  docker.md
benchmark/cblt/src/: main.rs  request.rs  response.rs
src/: buffer_pool.rs  config.rs  directive.rs  error.rs  file_server.rs  main.rs  request.rs  response.rs  reverse_proxy.rs  server.rs
swarm/: docker-compose.yml
